# health-rec

./: .buildinfo  .env.development  .env.production  .gitignore  .pre-commit-config.yaml  404.html  LICENSE.md  README.md  api.html  build.sh  docker-compose.dev.yml  docker-compose.yml  genindex.html  http-routingtable.html  index.html  mkdocs.yml  objects.inv  page.html  safety_and_evaluation.html  schema.html  search.html  searchindex.js
.github/workflows/: code_checks.yml  docs.yml  docs_build.yml  docs_deploy.yml  unit_tests.yml
_sources/: api.rst.txt  index.md.txt
api/: index.html
data-persistence/: index.html
docs/: api.md  data-persistence.md  index.md  safety_and_evaluation.md  schema.md
docs/source/: api.rst  conf.py  index.md  safety_and_evaluation.rst  schema.rst
eval/: collect_rag_outputs.py  combine_json_datasets.py  evaluate.py  evaluate.sh  evaluate_topkacc.py  generate_connex_dataset.sh  generate_dataset.py  generate_dataset_demo.py  generate_dataset_sc_mq.py  generate_gta_dataset.sh  generate_large_dataset.sh  generate_on_dataset.sh  rag-evaluation-pipeline.py
health_rec/: Dockerfile  Dockerfile.dev  README.md  __init__.py  load_data.py  main.py  manage_data.py  pyproject.toml  update_data.py
health_rec/api/: __init__.py  config.py  data.py  main.py  routes.py  schemas.py
health_rec/services/: deduplication.py  emergency.py  rag.py  ranking.py  refine.py  rerank.py  retriever.py  utils.py
health_rec/services/dev/: data.py
health_rec/tests/: __init__.py  conftest.py  test_api_config.py  test_api_data.py  test_deduplication.py  test_integration.py  test_load_data.py  test_load_update.py  test_update_data.py  test_utils.py
safety_and_evaluation/: index.html
schema/: index.html
scripts/: common.py  connex.py  download_211_data.py  download_connex_data.py  download_data.py  download_empower_data.py  fields.py  generate_test_data.py  view_data.py
search/: search_index.json
stylesheets/: extra.css
ui/: Dockerfile  Dockerfile.dev  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
ui/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ui/src/app/about/: page.tsx
ui/src/app/components/: additional-questions.tsx  discover-form.tsx  discover-page.tsx  emergency-alert.tsx  header.tsx  hero.tsx  map.tsx  markdown.tsx  no-services-found-alert.tsx  out-of-scope-alert.tsx  recommendation-container.tsx  result-card.tsx  results-container.tsx  search-form.tsx  search-results-container.tsx  service-card.tsx  service-modal.tsx  service.tsx
ui/src/app/design/: page.tsx
ui/src/app/dev/: page.tsx
ui/src/app/discover/: page.tsx
ui/src/app/recommendation/: page.tsx
ui/src/app/stores/: recommendation-store.ts
ui/src/app/types/: service.ts
