[project]
name = "health-rec"
version = "0.4.0"
description = "Health services recommendation API"
readme = "README.md"
authors = [{name = "Vector Institute", email = "ai_engineering@vectorinstitute.ai"}]
license = "Apache-2.0"
repository = "https://github.com/VectorInstitute/health-rec"
requires-python = ">=3.11"
dependencies = [
    "pip>=25.2",
    "fastapi>=0.115.2",
    "uvicorn>=0.30.6",
    "openai>=1.45.1",
    "chromadb==1.0.20",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.8.0",
    "urllib3==2.6.3",
    "filelock==3.20.3",
    "pyasn1==0.6.2",
    "virtualenv==20.36.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api/"]

[dependency-groups]
dev = [
    "pytest>=7.1.1",
    "pre-commit>=4.0.0",
    "pytest-cov>=3.0.0",
    "codecov>=2.1.13",
    "mypy>=1.7.0",
    "ruff>=0.6.0",
    "pip-audit>=2.7.1",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.8.0",
    "pymdown-extensions>=10.7.0",
    "mkdocs-include-markdown-plugin>=4.0.0",
]

eval = [
    "langchain-core>=0.3.13",
    "langchain-openai>=0.2.4",
    "langchain-community>=0.3.3",
    "ragas>=0.2.3",
    "datasets>=3.0.2",
    "nltk>=3.9.1",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
install_types = true
pretty = true
namespace_packages = true
explicit_package_bases = true
non_interactive = true
warn_unused_configs = true
allow_any_generics = false
allow_subclassing_any = false
allow_untyped_calls = false
allow_untyped_defs = false
allow_incomplete_defs = false
check_untyped_defs = true
allow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
extra_checks = true

[tool.ruff]
include = ["*.py", "pyproject.toml", "*.ipynb"]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A", "B", "COM", "C4", "RET", "SIM",
    "ICN", "Q", "RSE", "D", "E", "F",
    "I", "W", "N", "ERA", "PL"
]
fixable = [
    "A", "B", "COM", "C4", "RET", "SIM",
    "ICN", "Q", "RSE", "D", "E", "F",
    "I", "W", "N", "ERA", "PL"
]
ignore = [
    "B905", "E501", "D203", "D213",
    "PLR2004", "PLR0913", "COM812"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X*", "setUp"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=health_rec",
    "--cov-report=term-missing",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["health_rec"]
omit = ["tests/*", "*__init__.py"]
